--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,14 @@
 <h1>Regalia Organiser</h1>
 
+<% if user_signed_in? == false %>
+  <span>Please log in!</span>
+
+  <%= link_to 'Sign Up', new_user_registration_path %>
+  <%= link_to 'Sign In', new_user_session_path %>
+<% else %>
+
 <%= link_to 'Blog', posts_path %>
+<%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
+
+
+<% end %>
