--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+#header{
+  background-image: url("FC_Header.jpg");
+  background-position: left center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  top: 0;
+  width: 100%;
+  height: 200px;
+}
