--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,13 +2,71 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+body{
+  margin: 0;
+  background-image: url("bg2.png");
+  padding:0;
+  font-size:0;
+}
 
 #header{
-  background-image: url("FC_Header.jpg");
-  background-position: left center;
+  background-image: url("headerlong.jpg");
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   top: 0;
   width: 100%;
   height: 200px;
 }
+
+.topnav {
+  font-family: 'Amatic SC', cursive;
+  background: rgb(2,0,36);
+  background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(48,48,52,1) 49%, rgba(0,9,10,1) 100%);
+  overflow: hidden;
+}
+
+.topnav a {
+  float: right;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+#sidenav {
+  height: 100%;
+  width: 160px;
+  font-family: 'Amatic SC', cursive;
+  position: fixed;
+  z-index: 1;
+  top: 150;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+#sidenav a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+}
+
+#sidenav a:hover {
+  color: #f1f1f1;
+}
+
