--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,26 +1,31 @@
+<head>
+<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">   
+</head>
+<%= stylesheet_link_tag "home" %>
+
+<div id='header'></div>
+<div class="topnav">
+<%= link_to "Home", root_path %>
+</div>
+<div id="postbody">
 <h1>Listing Posts</h1>
 
 <%= link_to 'New Post', new_post_path %>
 
 <table>
-  <tr>
-    <th>Title<th>
-    <th>Text<th>
-    <th></th>
-  </tr>
-
   <% @posts.each do |post| %>
-    <tr>
-      <td><%= post.title %></td>
-      <td><%= post.text %></td>
-      <td><%= post.user.email %></td>
-      <td><%= link_to 'Show', post_path(post) %> |</td> 
-      <td><%= link_to 'Edit', edit_post_path(post) %> |</td>
-      <td><%= link_to 'Destroy', post_path(post),
+    <div id='post'>
+    <strong><%= post.title %></strong><br>
+    <small><%= post.created_at.to_s(:db) %></small>
+    <p><%= post.text %></p>
+    <p><%= post.user.username %></p>
+    <%= link_to 'Comment', post_path(post) %> |
+    <%= link_to 'Edit', edit_post_path(post) %> |
+    <%= link_to 'Destroy', post_path(post),
               method: :delete,
-              data: { confirm: "Are you sure?" } %></td>
-    </tr>
+              data: { confirm: "Are you sure?" } %>
+    </div>
   <% end %>
 </table>
 
-<%= link_to 'Home', root_path %>
+</div>
