--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -5,8 +5,13 @@
 <div id='header'></div>
 <div class="topnav">
 <%= link_to "Home", root_path %>
+<%= link_to 'Activity Wall', posts_path %>
+<%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
 </div>
-
 <div id="postbody">
-
+<div id='calendar'>
+<%= month_calendar do |date| %>
+  <%= date %>
+<% end %>
+</div>
 </div>
