--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,6 +6,8 @@
 <div id='header'></div>
 <div class="topnav">
 <%= link_to "Home", root_path %>
+<%= link_to 'Activity Wall', posts_path %>
+<%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
 </div>
 <div id="postbody">
 <h1>Listing Posts</h1>
